--- a/views/quotes.ejs
+++ b/views/quotes.ejs
@@ -6,20 +6,53 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>quotes</title>
     <link href="bootstrap.min.css" rel="stylesheet">
+    <script src="jquery-3.5.1.min.js"></script>
     <script src="bootstrap.bundle.min.js"></script>
+    <script src="bootbox.min.js"></script>
     <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
     <div class="container">
       <div class="row">
         <div class="col">
+          <div class="modal" tabindex="-1" id="formulario">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title">Modal title</h5>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                  <form action="/quotes" method="POST">
+                    <div class="mb-3">
+                      <label for="exampleInputEmail1" class="form-label">Autor:</label>
+                      <input required type="text" class="form-control" id="text" aria-describedby="emailHelp" name="author">
+                    </div>
+                    <div class="mb-3">
+                      <label for="exampleInputPassword1" class="form-label">Cita:</label>
+                      <input required type="text" class="form-control" id="exampleInputPassword1" name="quotesText">
+                    </div>
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                  </form>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                  <button type="button" class="btn btn-primary">Save changes</button>
+                </div>
+              </div>
+            </div>
+          </div>
           <div class="caja">
             <div class="royoArriba"></div>
             <h1 class="col offset-md-2 mb-5">here are the awesome quotes of 2021!!!!</h1>
+            <ul>
             <% for(let quote of quotes) { %>
-              <h2 class="col-5 offset-md-3">"<%= quote.author%>" <a  href="/delete/<%=quote.id%>"><img class="icon" src="/static/img/trash.png" alt=""></a></h2>
-              <h3 class="blue col-5 offset-md-4 ">-<%= quote.quotesText %></h3>
+              <li class="col-7 offset-md-3">"<%= quote.author%>" <span class="blue">-<%= quote.quotesText %></span>
+                <button class="btnEliminar" delquote="<%=quote.id %>"><img class="icon" src="/static/img/trash.png" alt="#"></button>
+                <a href="/update/<%=quote.id %>">update</a>
+              </li>     
             <% } %>
+            </ul>
             <div class="col offset-md-9 icon">
               <a href="/"></i> Back</a>
             </div>  
@@ -28,5 +61,35 @@
         </div>
       </div>
     </div>
+    <script>
+      $(document).ready(function () {
+        $(".btnEliminar").on("click", function () {
+          let boton = $(this);
+          let idQuote = boton.attr("delquote");
+          bootbox.confirm({
+            message: "quieres eliminar la cita?",
+            buttons: {
+              confirm: {
+                label: 'Si',
+                className: 'btn-success'
+              },
+              cancel: {
+                label: 'No',
+                className: 'btn-danger'
+              }
+            },
+            callback: function (result) {
+              if (result) {
+                $.get(`/delete/${idQuote}`, function (res) {
+                  boton.siblings().parent().remove();
+                  bootbox.alert(res.mensaje);
+                }, "json");
+              } 
+            }
+          });
+        });
+      });
+    </script>
+
   </body>
 </html>
