--- a/views/update.ejs
+++ b/views/update.ejs
@@ -5,27 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>quotes</title>
-    <link href="bootstrap.min.css" rel="stylesheet">
-    <script src="jquery-3.5.1.min.js"></script>
-    <script src="bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href="css/styles.css">
+    <link href="/bootstrap.min.css" rel="stylesheet">
+    <script src="/jquery-3.5.1.min.js"></script>
+    <script src="/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="/css/styles.css">
   </head>
   <body>
     <div class="container">
       <div class="row">
         <div class="col offset-md-2">
-          <h1>quotes online 100% rial no fake</h1>
+          <h1>update quotes online 100% rial no fake</h1>
         </div>
       </div>
       <div class="row g-3 align-items-center mt-4">
         <div class="col-auto offset-md-3">
           <form action="/quotes" method="post">
-            <label class="col-form-label">Your name</label>
+            <label class="col-form-label">Your new name</label>
             <input type="text" class="form-control" name="author" required>
-            <label class="col-form-label">Your quote</label></br>
+            <label class="col-form-label">Your new quote</label></br>
             <textarea id="cotizandoTexto" name="quotesText" cols="30" rows="10" required></textarea></br>
-            <a class="mr-4" href="quotes"><button type="submit">send quote</button></a>
-            <a href="quotes">skip to quote </a>
+            <a class="mr-4" href="/quotes"><button type="submit">update quote</button></a>
+            <a href="/quotes">back</a>
           </form>
         </div>
       </div>  
